@@ -109,7 +109,10 @@ int main(int argc, char* argv[])
   dolfin_set("method", method);
   dolfin_set("order", 1);
   dolfin_set("save final solution", true);
-  dolfin_set("save solution", false);
+
+  dolfin_set("save solution", true);
+
+  //dolfin_set("initial time step", 2.5e-3);
 
   //dolfin_set("fixed time step", true);
   //dolfin_set("partitioning threshold", 0.25);
